Stop walking up the tree looking for something to size against if we hit a positioned frame.  Bug 221784, r+sr=roc